LibFree() crashes Blender #40172

Closed
opened 2014-05-13 03:11:28 +02:00 by Raf Colson · 11 comments

System Information
Windows 7 64 bit, Nvidia GeForce GT540M Cuda

Blender Version
Broken: 2.50 up to current: 2.70a

Short description of error
Blender crashes when freeing libraries: [bge.logic.LibFree(l) for l in bge.logic.LibList()]. It occurs sporadically. Possibly related to materials.

Exact steps for others to reproduce the error
Press 'P' to start the game. A number of objects will be spawned and their meshes will be replaced by new ones (LibNew()). Press 'Spacebar' to free all libraries. For testing purposes on every logic tic only one library will be freed. After some are freed Blender crashes.

Now reopen the blend and remove the material slot on the Icosphere and follow the same steps. This time Blender doesn't crash. Note that removing the material slot won't prevent a crash with some builds after 2.70a, for example Hash c08c931.

LibFree_crash_bug.blend

**System Information** Windows 7 64 bit, Nvidia GeForce GT540M Cuda **Blender Version** Broken: 2.50 up to current: 2.70a **Short description of error** Blender crashes when freeing libraries: [bge.logic.LibFree(l) for l in bge.logic.LibList()]. It occurs sporadically. Possibly related to materials. **Exact steps for others to reproduce the error** Press 'P' to start the game. A number of objects will be spawned and their meshes will be replaced by new ones (LibNew()). Press 'Spacebar' to free all libraries. For testing purposes on every logic tic only one library will be freed. After some are freed Blender crashes. Now reopen the blend and remove the material slot on the Icosphere and follow the same steps. This time Blender doesn't crash. Note that removing the material slot won't prevent a crash with some builds after 2.70a, for example Hash c08c931. [LibFree_crash_bug.blend](https://archive.blender.org/developer/F88748/LibFree_crash_bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @raco

Added subscriber: @raco

Added subscriber: @Moguri

Added subscriber: @Moguri

This sounds like a duplicate of #35845.

This sounds like a duplicate of #35845.

Changed status from 'Open' to: 'Duplicate'

Changed status from 'Open' to: 'Duplicate'

✘ Merged into #35845.

✘ Merged into #35845.

Changed status from 'Duplicate' to: 'Open'

Changed status from 'Duplicate' to: 'Open'

This is a slightly different issue than #35845. They are related, but are not exact duplicates.

This is a slightly different issue than #35845. They are related, but are not exact duplicates.

This issue was referenced by 23b682d594

This issue was referenced by 23b682d5948e98264340e6dc81237b81d299b5b0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 23b682d594.

Closed by commit 23b682d594.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40172
No description provided.