Fix T40172: LibFree() crashes with shared materials (e.g., from multiple LibNew() calls)